# indicator-network

./: .bzrignore  CMakeLists.txt  COPYING.LGPL  INSTALL  MERGE-REVIEW  Makefile  Makefile.am  MenuExporter.vala  Parser.vala  README  README.md  README.txt  README.widgets  autogen.sh  build.sh  config.h.in  configure.ac  test.xml
audio/: AudioMenuService.vala  Makefile.am
client/app/: CMakeLists.txt  GroupMenu.qml  ServiceListPage.qml  ServiceSubGroup.qml  ServiceSubPage.qml  TypeDiscovery.js  main.cpp  main.qml  serviceloader.cpp  serviceloader.h  systemsettings.qrc
client/dbusmodel/: CMakeLists.txt  com.canonical.dbusmenu.xml  dbuscontrol.cpp  dbuscontrol.h  dbusmenuconst.h  dbusmodel.cpp  dbusmodel.h  qdbusmenuitem.cpp  qdbusmenuitem.h  qmldbus.conf.in
data/: CMakeLists.txt  Makefile.am  com.canonical.Unity.networksettings.service.in  com.canonical.indicator.network  com.canonical.indicator.network.gschema.xml  com.canonical.indicator.network.service.in  com.canonical.powerd.xml  com.canonical.settings.network.service.in  com.canonical.settings.sound.service.in  com.canonical.snapdecisions.feedback.xml  com.ubuntu.connectivity1.Modem.xml  com.ubuntu.connectivity1.NetworkingStatus.Private.xml  com.ubuntu.connectivity1.NetworkingStatus.xml  com.ubuntu.connectivity1.Private.xml  com.ubuntu.connectivity1.Sim.xml  com.ubuntu.connectivity1.vpn.VpnConnection.OpenVpn.xml  com.ubuntu.connectivity1.vpn.VpnConnection.Pptp.xml  com.ubuntu.connectivity1.vpn.VpnConnection.xml  connectivity-qt.map  connectivity-qt.pc.in  indicator-network-secret-agent.conf.in  indicator-network-secret-agent.service.in  indicator-network.conf.in  indicator-network.desktop.in  indicator-network.service.in  indicator-network.upstart.desktop.in  indicator-secret-agent.conf.in  network.indicator  nm-active-connection.xml  nm-device-ethernet.xml  nm-device-statistics.xml  nm-manager.xml  nm-secret-agent.xml  nm-settings-connection.xml  nm-settings.xml  nm-vpn-connection.xml  ofono-connection-manager.xml  ofono-manager.xml  ofono-modem.xml  ofono-network-registration.xml  (+3 more)
data/icons/: CMakeLists.txt  Makefile.am
doc/: CMakeLists.txt
doc/dbus/: connectivity-api.txt
doc/qt/: CMakeLists.txt
exportmenu/: ExportMenu.vala  Makefile.am  MenuExporter.vala  Parser.vala  Settings.vala  export-menu-exporter.vala  export-menu-parser.vala  export-menu-settings.vala  export-menu.vala
network/: CMakeLists.txt  Makefile.am  accesspoint-info.c  accesspoint-info.h  action-muxer.c  action-muxer.h  action-muxer.vapi  device-abstraction.vala  device-base.vala  device-ethernet.vala  device-interface.vala  device-mobile.vala  device-wifi.vala  indicator-menu.h  indicator-network-service.cpp  libnm-glib.vapi  libnm-util.vapi  mobile-sim-manager.vala  modem-manager.cpp  modem-manager.h  modem.cpp  modem.h  network-accesspoint-info.c  network-accesspoint-info.h  network-accesspointitem.c  network-action-manager.vala  network-menu-application.vala  network-menu-server.c  network-menu-service.vala  network-menu.vala  network-utils-wifi.c  ofono.vala  quick-access-section.cpp  quick-access-section.h  root-state.cpp  root-state.h  run_valgrind.sh  secret-marshal.list  service.h  settings-airplane.vala  (+18 more)
network/gio-helpers/: util.h  variant.h
network/menuitems/: access-point-item.h  item.h  modem-info-item.cpp  section.h  switch-item.h  text-item.h
network/menumodel-cpp/: action-group-exporter.h  action-group-merger.h  action-group.h  action.cpp  action.h  menu-exporter.h  menu-item.h  menu-merger.h  menu-model.h  menu.h  util.h  variant.h
network/notify-cpp/: notification.cpp  notification.h
network/url-dispatcher-cpp/: url-dispatcher.cpp
po/: CMakeLists.txt  POTFILES.in  POTFILES.skip  am.po  ar.po  ast.po  az.po  be.po  bg.po  br.po  bs.po  ca.po  ca@valencia.po  ckb.po  cs.po  cy.po  da.po  de.po  el.po  en_AU.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  gd.po  gl.po  he.po  hr.po  hu.po  ia.po  id.po  indicator-network.pot  is.po  it.po  ja.po  ka.po  (+32 more)
secret-agent/: CMakeLists.txt  DBusTypes.h  Makefile.am  PasswordMenu.cpp  SecretAgent.cpp  SecretAgent.h  SecretRequest.cpp  SecretRequest.h  main.cpp  secret-agent-daemon.c  secret-agent.c  secret-agent.h
secret-agent/gtk/: PasswordMenu.cpp  PasswordMenu.h
server/: CMakeLists.txt  Makefile.am  accesspoint-info.c  accesspointitem.c  accesspointitem.h  network-service.c  network-utils-wifi.c  secret-agent-daemon.c  secret-agent.c  secret-agent.h  secret-marshal.list
server/src/: CMakeLists.txt  MenuExporter.vala  Parser.vala  Settings.vala  accesspointitem.c  accesspointitem.h  network-service.c
server/xml/: tabletmenus.xml  test.xml
sound/: Makefile.am  sound-menu-application.vala  sound-menu-server.vala
src/: CMakeLists.txt
src/agent/: CMakeLists.txt  CredentialStore.cpp  CredentialStore.h  KeyringCredentialStore.cpp  KeyringCredentialStore.h  PasswordMenu.cpp  PasswordMenu.h  SecretAgent.cpp  SecretAgent.h  SecretAgentInclude.h  SecretRequest.cpp  SecretRequest.h  agent-main.cpp
src/connectivity-api/: CMakeLists.txt
src/connectivity-cpp/: CMakeLists.txt
src/dbus-cpp/: CMakeLists.txt
src/indicator/: CMakeLists.txt  agent-main.cpp  factory.cpp  factory.h  glib.supp  icons.cpp  icons.h  indicator-menu.cpp  indicator-menu.h  indicator-network-service.cpp  indicator-network-service.h  main.cpp  menu-builder.cpp  menu-builder.h  modem-manager.cpp  modem-manager.h  modem.cpp  modem.h  quick-access-section.cpp  quick-access-section.h  root-state.cpp  root-state.h  service.h  sim-unlock-dialog.cpp  sim-unlock-dialog.h  vpn-status-notifier.cpp  vpn-status-notifier.h  wifi-link-item.cpp  wifi-link-item.h  wifi-section.cpp  wifi-section.h  wwan-link-item.cpp  wwan-section.cpp  wwan-section.h
src/menumodel-cpp/: CMakeLists.txt  action-group-exporter.cpp  action-group-exporter.h  action-group-merger.cpp  action-group.h  (+11 more)
system-ui/: CMakeLists.txt
test/: Makefile.am  network.py  test-exportmenu.cc  test-parser.cc
tests/: CMakeLists.txt  Makefile.am  TestSecretAgent.cpp  main.cpp  manual  network.py  test-exportmenu.c  test-parser.c
(+587 files in other folders)
